# realtime-cdc-pipeline

./: .gitignore  README.md  docker-compose.yml  terraform.tfvars.example
airflow/: Dockerfile
airflow/dags/: dbt_pipeline.py
api/: Dockerfile  main.py
dbt/: .user.yml  Dockerfile  dbt_project.yml  profiles.yml
dbt/models/marts/: fct_order_metrics.sql  fct_orders.sql
dbt/models/staging/: schema.yml  stg_orders.sql
debezium/: register-connector.json
flink/: Dockerfile
flink/jobs/: cdc_processor.py
grafana/provisioning/dashboards/: dashboard.yml  orders.json
grafana/provisioning/datasources/: duckdb.yml
scripts/: register-debezium.sh  submit-flink-job.sh
simulator/: Dockerfile  pyproject.toml  simulate.py
sql/: init.sql
terraform/: README.md  database.tf  main.tf  network.tf  outputs.tf  storage.tf  variables.tf
